kubernetes/k8s-application-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: risk-management
  name: risk-management-deployment
spec:
  selector:
    matchLabels:
      app: risk-management-app
  replicas: 3
  template:
    metadata:
      labels:
        app: risk-management-app
    spec:
      containers:
      - image: juliocas/risk-management:latest
        imagePullPolicy: Always
        name: risk-management-app
        ports:
        - containerPort: 3000
