kubernetes/k8s-application-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: risk-management
  name: risk-management-service
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: risk-management-app
